[gd_scene load_steps=21 format=3 uid="uid://cp3ax6e8ms25q"]

[ext_resource type="Script" uid="uid://lt3rntwboiig" path="res://scenes/boss_enemy_1.gd" id="1_brynu"]
[ext_resource type="Script" uid="uid://xgrsbkuh5tpa" path="res://scenes/boss1_explosions.gd" id="2_pg7cj"]
[ext_resource type="Texture2D" uid="uid://dp7ucg8qc3iu8" path="res://sprites/horu/images/boss_leaf1.png" id="2_ul2u8"]
[ext_resource type="Texture2D" uid="uid://dv1q1s22geh1a" path="res://sprites/horu/images/boss_leaf2.png" id="3_qb1vl"]
[ext_resource type="Texture2D" uid="uid://c267uipgbl5i1" path="res://sprites/horu/images/boss_leaf3.png" id="4_3i60c"]
[ext_resource type="Script" uid="uid://dlrnr7yfg4nkl" path="res://scenes/explosion_boss1.gd" id="5_2e7le"]
[ext_resource type="Texture2D" uid="uid://capc1hdlw0gpl" path="res://sprites/horu/images/stars1.png" id="10_iwu1p"]
[ext_resource type="PackedScene" uid="uid://2t17q8uh38pg" path="res://scenes/BossExplosionShader.tscn" id="10_kkfjs"]
[ext_resource type="Texture2D" uid="uid://caxf4k5okg3cr" path="res://sprites/horu/images/stars2.png" id="11_muud4"]
[ext_resource type="Texture2D" uid="uid://bpaljgkr5iu14" path="res://sprites/horu/images/stars3.png" id="12_p63ih"]

[sub_resource type="Animation" id="Animation_x7xxi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_icow3"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2, 0.366667, 0.566667, 0.733333, 0.866667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 1), Vector2(1, 0.5), Vector2(1.3, 1), Vector2(1, 1.3), Vector2(0.3, 1), Vector2(1, 0.3), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lkb8u"]
_data = {
&"RESET": SubResource("Animation_x7xxi"),
&"new_animation": SubResource("Animation_icow3")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_0vk2b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ul2u8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qb1vl")
}],
"loop": true,
"name": &"killing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_3i60c")
}],
"loop": true,
"name": &"stunned",
"speed": 5.0
}, {
"frames": [{
"duration": 5.0,
"texture": ExtResource("2_ul2u8")
}, {
"duration": 5.0,
"texture": ExtResource("3_qb1vl")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_plj2x"]
radius = 192.003

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8cr4"]
size = Vector2(198, 12.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xljdb"]
size = Vector2(162, 348)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xun4k"]
size = Vector2(153, 319)

[sub_resource type="CircleShape2D" id="CircleShape2D_flgwd"]
radius = 141.057

[sub_resource type="SpriteFrames" id="SpriteFrames_4xq1w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_iwu1p")
}, {
"duration": 1.0,
"texture": ExtResource("11_muud4")
}, {
"duration": 1.0,
"texture": ExtResource("12_p63ih")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="BossEnemy1" type="CharacterBody2D"]
script = ExtResource("1_brynu")

[node name="Hit" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lkb8u")
}
speed_scale = 3.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="explosions" type="Node2D" parent="."]
script = ExtResource("2_pg7cj")

[node name="Marker2D" type="Marker2D" parent="explosions"]

[node name="Marker2D2" type="Marker2D" parent="explosions"]
position = Vector2(48, -139)

[node name="Marker2D3" type="Marker2D" parent="explosions"]
position = Vector2(-95, -74)

[node name="Marker2D4" type="Marker2D" parent="explosions"]
position = Vector2(-170, 16)

[node name="Marker2D5" type="Marker2D" parent="explosions"]
position = Vector2(-61, 98)

[node name="Marker2D6" type="Marker2D" parent="explosions"]
position = Vector2(145, 17)

[node name="Marker2D7" type="Marker2D" parent="explosions"]
position = Vector2(-2, 144)

[node name="Marker2D8" type="Marker2D" parent="explosions"]
position = Vector2(69, 79)

[node name="Marker2D10" type="Marker2D" parent="explosions"]
position = Vector2(-56, -153)

[node name="Marker2D11" type="Marker2D" parent="explosions"]
position = Vector2(54, -173)

[node name="Marker2D12" type="Marker2D" parent="explosions"]
position = Vector2(-200, -72)

[node name="Marker2D13" type="Marker2D" parent="explosions"]
position = Vector2(-163, 104)

[node name="Marker2D14" type="Marker2D" parent="explosions"]
position = Vector2(-53, 159)

[node name="Marker2D15" type="Marker2D" parent="explosions"]
position = Vector2(124, 129)

[node name="Marker2D16" type="Marker2D" parent="explosions"]
position = Vector2(137, 63)

[node name="Marker2D17" type="Marker2D" parent="explosions"]
position = Vector2(168, 153)

[node name="Marker2D18" type="Marker2D" parent="explosions"]
position = Vector2(-149, -145)

[node name="Marker2D19" type="Marker2D" parent="explosions"]
position = Vector2(-82, -189)

[node name="Marker2D20" type="Marker2D" parent="explosions"]
position = Vector2(5, -209)

[node name="Marker2D21" type="Marker2D" parent="explosions"]
position = Vector2(104, -154)

[node name="Marker2D22" type="Marker2D" parent="explosions"]
position = Vector2(-123, 63)

[node name="Marker2D23" type="Marker2D" parent="explosions"]
position = Vector2(75, 129)

[node name="Marker2D24" type="Marker2D" parent="explosions"]
position = Vector2(142, -38)

[node name="Marker2D25" type="Marker2D" parent="explosions"]
position = Vector2(179, -88)

[node name="Marker2D9" type="Marker2D" parent="explosions"]
position = Vector2(-125, 138)

[node name="sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 190)
sprite_frames = SubResource("SpriteFrames_0vk2b")
animation = &"idle"
offset = Vector2(1, -190)

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_plj2x")

[node name="Area" type="Area2D" parent="."]
position = Vector2(-4, 19)

[node name="collider" type="CollisionShape2D" parent="Area"]
position = Vector2(6, 167.75)
shape = SubResource("RectangleShape2D_i8cr4")

[node name="explosion" type="Area2D" parent="."]
script = ExtResource("5_2e7le")

[node name="collider" type="CollisionShape2D" parent="explosion"]
position = Vector2(-121, 4)
shape = SubResource("RectangleShape2D_xljdb")

[node name="collider2" type="CollisionShape2D" parent="explosion"]
position = Vector2(124, 19)
shape = SubResource("RectangleShape2D_xun4k")

[node name="collider3" type="CollisionShape2D" parent="explosion"]
position = Vector2(4, -64)
shape = SubResource("CircleShape2D_flgwd")

[node name="stars_stunned" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(7.62939e-06, -104)
scale = Vector2(9.24375, 6.49375)
sprite_frames = SubResource("SpriteFrames_4xq1w")
autoplay = "default"
frame_progress = 0.211857

[node name="BossExplosionShader" parent="." instance=ExtResource("10_kkfjs")]
visible = false

[connection signal="timeout" from="Timer" to="explosions" method="_on_timer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
